Add google analytics account.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-<title>Unified crawler using PhantomJS</title>
-
-<xmp theme="united" style="display:none;">
-
+<head>
+  <title>Unified crawler using PhantomJS</title>
+  <meta name="description" content="Use configurations to run an Ajax-enabled crawler with PhantomJS." />
+</head>
+<body>
+<textarea theme="united" style="display:none;">
 Unicrawler Client
 ======
 
@@ -223,8 +225,20 @@ __Search in baidu__
   }
 ]
 ```
-</xmp>
+</textarea>
+<script type="text/javascript">
 
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-29233497-3']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
 <a href="https://github.com/bestmike007/unicrawler"><img style="position: fixed; top: -10px; right: 0; border: 0; z-index: 100;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
 </html>
